
6.21 2012-08-25 Gregory Nutt <gnutt@nuttx.org>

	* apps/include/: Stylistic clean-up of all header files.
	* apps/modbus and apps/include/modbus:  A port of freemodbus-v1.5.0
	  has been added to the NuttX apps/ source tree.
	* apps/examples/modbus:  A port of the freemodbus-v1.5.0 "demo"
	  program that will be used to verify the FreeModBus port
	* apps/modbus:  Don't use strerror().  It is just too big.
	* apps/modbus:  Add CONFIG_MB_TERMIOS.  If the driver doesn't support
	  termios ioctls, then don't bother trying to configure the baud, parity
	  etc.
	* apps/nshlib:  If waitpid() is supported, then NSH now catches the
	  return value from spawned applications (provided by Mike Smith)
	* apps/nshlib:  Lock the scheduler while starting built-in applications
	  in order to eliminate race conditions (also from Mike Smith).
	* apps/examples/adc, pwm, and qencoder:  Add support for testing
	  devices with multiple ADC, PWM, and QE devices.
	* apps/nshlib/nsh_mntcmds.c:  Separated mount-related commands out of
	  nsh_fscmds.c.  Extended to the mount command so that if no arguments
	  are provided, then the current mountpoints are enumerated.
	* apps/nshlib/nsh_mntcmds.c:  Add an NSH df command to list the
	  properties of mounted file systems.
	* apps/nshlib/nsh_parse.c:  Extend help command options.  'help' with
	  no arguments outputs a short list of commands.  With -v lists all
	  command line details.  A command name can be added to just get
	  help on one command.
	* system/readline.c:  If character input/output is interrupted by a
	  signal, then readline() will try the read/write again.
	* apps/*/Make.defs:  Numerous fixes needed to use the automated
	  configuration (from Richard Cochran).

6.22 2012-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* apps/netutils/thttpd/thttpd_cgi.c:  Missing NULL in argv[]
	  list (contributed by Kate).
	* apps/nshlib/nsh_parse.c: CONFIG_NSH_DISABLE_WGET not CONFIG_NSH_DISABLE_GET
	  in one location (found by Kate).
